--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^11.9.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "use-shopping-cart": "^3.1.4"
   }
 }
